--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -24,5 +24,6 @@
         android:layout_height="match_parent"
         android:layout_marginStart="20sp"
         android:layout_marginEnd="20sp"
+        android:alpha="0.6"
         android:src="@drawable/ic_placeholder_no_game" />
 </android.support.constraint.ConstraintLayout>
