--- a/app/src/main/res/layout/content_trick.xml
+++ b/app/src/main/res/layout/content_trick.xml
@@ -62,4 +62,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView android:id="@+id/empty_trick_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="20sp"
+        android:layout_marginEnd="20sp"
+        android:alpha="0.6"
+        android:src="@drawable/ic_placeholder_no_trick" />
 </android.support.constraint.ConstraintLayout>
